--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -35,6 +35,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:hint="@string/firstNameHint"
+            android:textColor="@color/white"
             android:textColorHint="@color/hint"
             android:inputType="textPersonName"
             android:padding="8dp"/>
@@ -45,6 +46,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:hint="@string/lastNameHint"
+            android:textColor="@color/white"
             android:inputType="textPersonName"
             android:textColorHint="@color/hint"
             android:padding="8dp"
@@ -57,6 +59,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:textColor="@color/white"
         android:inputType="phone"
         android:textColorHint="@color/hint"
         android:hint="@string/phone_number"/>
@@ -67,18 +70,54 @@
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:textColor="@color/white"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/hint"
         android:hint="@string/EmailHint"/>
 
+    <EditText
+        android:id="@+id/user_pass"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:textColor="@color/white"
+        android:inputType="textPassword"
+        android:textColorHint="@color/hint"
+        android:hint="@string/pass"/>
+
+    <EditText
+        android:id="@+id/user_pass1"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:textColor="@color/white"
+        android:inputType="textPassword"
+        android:textColorHint="@color/hint"
+        android:hint="@string/pass1"/>
+
     <Button
         android:id="@+id/reg_button"
-        android:layout_marginTop="30dp"
         android:layout_width="220dp"
-        android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
         android:text="@string/buttonText"
-        android:textStyle="bold"/>
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/goLoginDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="@string/loginText"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
