--- a/app/src/main/res/layout/dialog_hackathon_details.xml
+++ b/app/src/main/res/layout/dialog_hackathon_details.xml
@@ -31,16 +31,32 @@
             android:paddingTop="8dp" />
 
         <TextView
+            android:id="@+id/dialogType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Тип хакатона"
+            android:textStyle="italic"
+            android:paddingTop="4dp"/>
+
+        <TextView
             android:id="@+id/dialogCity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="8dp" />
 
         <TextView
-            android:id="@+id/dialogType"
+            android:id="@+id/dialogAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="4dp" />
+            android:paddingTop="4dp"
+            android:textColor="#white"
+            android:textSize="14sp"/>
+
+        <com.yandex.mapkit.mapview.MapView
+            android:id="@+id/mapView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="8dp"/>
 
         <Button
             android:id="@+id/buttonParticipate"
